--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,8 +5,12 @@ bind -n C-l select-pane -R
 
 # Split panes using | and - (more intuitive than % and ")
 # and adding -c flag to specify current directory
-bind | split-window -h -c "${pane_current_path}"
-bind - split-window -v -c "${pane_current_path}"
+# Save Neovim session before splitting
+bind | send-keys ':mksession! /tmp/nvim_tmux_session.vim' Enter ':q' Enter \; \
+     split-window -h -c "#{pane_current_path}" "nvim -S /tmp/nvim_tmux_session.vim"
+bind - send-keys ':mksession! /tmp/nvim_tmux_session.vim' Enter ':q' Enter \; \
+     split-window -v -c "#{pane_current_path}" "nvim -S /tmp/nvim_tmux_session.vim"
+
 unbind '"'
 unbind %
 
@@ -16,3 +20,6 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # Enable scroll history
 set-option -g history-limit 50000
+
+# Setting base-index to 1 for windows rather than default zero
+set -g base-index 1
