--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,14 +3,11 @@ bind -n C-j select-pane -D
 bind -n C-k select-pane -U
 bind -n C-l select-pane -R
 
-# Split panes using | and - (more intuitive than % and ")
-# and adding -c flag to specify current directory
-# Save Neovim session before splitting
-bind | send-keys ':mksession! /tmp/nvim_tmux_session.vim' Enter ':q' Enter \; \
-     split-window -h -c "#{pane_current_path}" "nvim -S /tmp/nvim_tmux_session.vim"
-bind - send-keys ':mksession! /tmp/nvim_tmux_session.vim' Enter ':q' Enter \; \
-     split-window -v -c "#{pane_current_path}" "nvim -S /tmp/nvim_tmux_session.vim"
+# Split panes using | and -
+bind | split-window -h -c "#{pane_current_path}"  # Split horizontally
+bind - split-window -v -c "#{pane_current_path}"  # Split vertically
 
+# Remove the old bindings (if you have them)
 unbind '"'
 unbind %
 
@@ -23,3 +20,4 @@ set-option -g history-limit 50000
 
 # Setting base-index to 1 for windows rather than default zero
 set -g base-index 1
+setw -g pane-base-index 1
