--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -29,4 +29,7 @@ set-option -g history-limit 50000
 set -g base-index 1
 setw -g pane-base-index 1
 
+set-window-option -g pane-border-status off
+
+
 
